fix sidenav on mobile but i don't know whether it work or not QQ

--- a/assets/css/summit/index.css
+++ b/assets/css/summit/index.css
@@ -43,10 +43,6 @@ a:hover {
   height: 100%;
 }
 
-/* line 58, ../../sass/summit/_general.scss */
-#sidenav:hover #nav_button {
-  left: -50px;
-}
 /* line 61, ../../sass/summit/_general.scss */
 #sidenav #nav_button {
   position: fixed;
@@ -133,7 +129,7 @@ a:hover {
 }
 /* line 139, ../../sass/summit/_general.scss */
 #sidenav #nav_menu .list ul li {
-  padding: 20px 40px;
+  padding: 10px 40px;
   width: 300px;
   position: relative;
 }
@@ -159,42 +155,54 @@ a:hover {
   font-size: 28px;
   font-weight: bold;
 }
-/* line 160, ../../sass/summit/_general.scss */
+@media screen and (max-width: 768px) {
+  /* line 156, ../../sass/summit/_general.scss */
+  #sidenav #nav_menu .list ul li .title-zh {
+    font-size: 24px;
+  }
+}
+/* line 163, ../../sass/summit/_general.scss */
 #sidenav #nav_menu .list ul li .title-en {
   font-size: 24px;
   font-style: italic;
 }
-/* line 167, ../../sass/summit/_general.scss */
+@media screen and (max-width: 768px) {
+  /* line 163, ../../sass/summit/_general.scss */
+  #sidenav #nav_menu .list ul li .title-en {
+    font-size: 20px;
+  }
+}
+/* line 173, ../../sass/summit/_general.scss */
 #sidenav #nav_menu .list.sub {
   left: 300px;
   z-index: 99;
   background-color: #ddd;
 }
 @media screen and (max-width: 768px) {
-  /* line 167, ../../sass/summit/_general.scss */
+  /* line 173, ../../sass/summit/_general.scss */
   #sidenav #nav_menu .list.sub {
     left: 0;
   }
 }
-/* line 175, ../../sass/summit/_general.scss */
+/* line 181, ../../sass/summit/_general.scss */
 #sidenav #nav_menu .list.sub ul {
   padding-top: 120px;
 }
-/* line 178, ../../sass/summit/_general.scss */
+/* line 184, ../../sass/summit/_general.scss */
 #sidenav #nav_menu .list.sub .back_button {
   position: absolute;
   left: 10px;
   top: 10px;
 }
 
-/* line 187, ../../sass/summit/_general.scss */
+/* line 193, ../../sass/summit/_general.scss */
 footer {
   color: #fff;
   text-align: center;
   background-color: #333;
   padding: 30px 0 20px;
 }
-/* line 193, ../../sass/summit/_general.scss */
+/* line 199, ../../sass/summit/_general.scss */
 footer a {
   color: #fff;
 }
